--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,25 +3,25 @@ services:
   backdroppr:
     container_name: backdroppr
     image: shinigandhi/backdroppr:latest
-    environment:
-      # required in config.yaml
-      - radarr_api=radarr_api_token
-      - radarr_host=http://localhost:7878
-      - sonarr_api=sonarr_api_token
-      - sonarr_host=http://localhost:8989
-      - tmdb_api="tmdb_token"
-      - output_dirs=trailers
-      # not required in config.yaml
-      - sleep_time=3
-      - length_range=30,300
-      - filetype=webm
-      - skip_intros=True
-      - thread_count=8
-      - subs=False
-      - moviepath="/vault/Media/Movies"
-      - tvpath="/vault/Media/TV Shows"
+    ### Optional: Uncomment case-sensitive environment variables to configure backdroppr ###
+    # environment:
+    #   - RADARR_API="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
+    #   - RADARR_HOST=http://localhost:7878
+    #   - SONARR_API="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
+    #   - SONARR_HOST=http://localhost:8989
+    #   - TMDB_API=""xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx""
+    #   - OUTPUT_DIRS="trailers"
+    #   - SLEEP_TIME=3
+    #   - LENGTH_RANGE="30,300"
+    #   - FILETYPE="webm"
+    #   - SKIP_INTROS=True
+    #   - THREAD_COUNT="8"
+    #   - SUBS=True
+      ### Uncomment if needed ###
+      # - MOVIEPATH="/vault/Media/Movies"
+      # - TVPATH="/vault/Media/TV Shows"
     restart: always
     volumes:
-      - ./config:/config #Where the config file will be located
+      - ./config:/config #The config file location, Optional if using env variables
       - /vault/Media/TV Shows:/tv #TV show directory re-routing
       - /vault/Media/Movies:/movies #Movie directory re-routing
